--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "core-js": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "redux": "^4.0.5"
+    "react-scripts": "^3.4.3",
+    "redux": "^4.0.5",
+    "typescript": "^4.0.3",
+    "watchpack-chokidar2": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
